<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="com.example.petaread.janken.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="239dp"
        android:layout_weight="0.16"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textview01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.23"
        android:gravity="center_horizontal"
        android:text="@string/mes01" />

    <LinearLayout
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/button_R"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hand_r" />

        <Button
            android:id="@+id/button_S"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hand_s" />

        <Button
            android:id="@+id/button_P"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hand_p" />
    </LinearLayout>

    <TextView
        android:id="@+id/textview02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/counter" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_reset" />
</LinearLayout>